# owlrepo-client

./: .env.production  .env.staging  .env.template  .gcloudignore  .gitignore  .pre-commit-config.yaml  README.md  app.nonprod.yaml  app.prod.yaml  app.yaml  deploy.py  package-lock.json  package.json  playwright.config.js  playwright.sw-redirect.config.js  rollup.config.js  svelte.config.js  vite.config.js
.github/workflows/: release.yml  test.yml
.storybook/: preview-head.html  preview.js
public/: global.css  index.html
scripts/: build-binary.js  index.js  move-binary.js
src/: App.svelte  app.html  client.js  hooks.js  image.js  server.js  service-worker.js  stats.js  stats.test.js  store.js  tabulator.js  template.html  token.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crop.rs  lib.rs  main.rs
src/components/: ActivityHeatmap.stories.js  ActivityHeatmap.svelte  CollapseInfo.svelte  IndexView.svelte  LastUpload.svelte  Navbar.svelte  Plot.svelte  PriceQuantityCharts.svelte  SearchBox.svelte  SearchItemIndex.svelte  SummaryElement.svelte  SummaryView.svelte  Table.svelte  TabulatorSearchBox.svelte  TopContributors.svelte  TopUploaders.svelte  Uploader.svelte
src/docs/: FrontMatter.svx  IndexDescription.svx  PublicKey.svelte  References.svx  UploadInstructions.svx
src/lib/: duckdb.js  explore-share.js  image.js  slug.js  store.js  token.js
src/routes/: +error.svelte  +layout.svelte  +page.svelte  Charts.svelte  Curate.svelte  Guide.svelte  Home.svelte  Items.svelte  (+15 more)
static/: global.css  robots.txt
(+114 files in other folders)
