[package]
name = "owlrepo-client"
version = "0.1.0"
description = "A desktop owlrepo client"
authors = ["geospiza@protonmail.com"]
license = ""
repository = ""
default-run = "owlrepo-client"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all", "devtools"] }

glob = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.6.0"

image = "0.23.14"
rustfft = "6.0.1"
nshare = "0.8.0"
ndarray = "0.15.4"
rayon = "1.5"

tempfile = "3.3.0"
base64 = "0.13.0"
trash = "2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
